[gd_scene load_steps=16 format=2]

[ext_resource path="res://addons/Popochiu/Editor/Popups/CreateCharacter/CreateCharacter.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/Popochiu/Editor/Popups/CreateDialogTree/CreateDialogTree.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/Popochiu/Editor/Popups/CreateRoom/CreateRoom.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/Popochiu/Editor/MainDock/GroupButton/PopochiuGroupButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/Popochiu/Editor/Popups/CreateProp/CreateProp.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/Popochiu/Editor/Popups/CreateInventoryItem/CreateInventoryItem.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/Popochiu/Editor/MainDock/PopochiuDock.gd" type="Script" id=7]
[ext_resource path="res://addons/Popochiu/icons/characters.png" type="Texture" id=8]
[ext_resource path="res://addons/Popochiu/icons/dialogs.png" type="Texture" id=9]
[ext_resource path="res://addons/Popochiu/icons/rooms.png" type="Texture" id=10]
[ext_resource path="res://addons/Popochiu/icons/inventory_items.png" type="Texture" id=11]
[ext_resource path="res://addons/Popochiu/icons/props.png" type="Texture" id=12]
[ext_resource path="res://addons/Popochiu/icons/hotspots.png" type="Texture" id=13]
[ext_resource path="res://addons/Popochiu/Editor/Popups/CreateHotspot/CreateHotspot.tscn" type="PackedScene" id=14]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_top = 2.0
content_margin_bottom = 4.0
bg_color = Color( 0.556863, 0.235294, 0.592157, 1 )

[node name="Popochiu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 316.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
margin_right = 312.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_styles/normal = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "--- P o p o c h i u ---"
align = 1
valign = 1
uppercase = true

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 312.0
margin_bottom = 172.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Main"]
margin_right = 304.0
margin_bottom = 136.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Main/ScrollContainer"]
margin_right = 292.0
margin_bottom = 172.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RoomsGroupButton" parent="MarginContainer/VBoxContainer/TabContainer/Main/ScrollContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_right = 292.0
margin_bottom = 16.0
icon = ExtResource( 10 )
target_group = NodePath("../RoomsList")
color = Color( 0.439216, 0.427451, 0.921569, 0.498039 )
title = "Habitaciones"

[node name="RoomsList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Main/ScrollContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 292.0
margin_bottom = 40.0

[node name="BtnCreateRoom" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Main/ScrollContainer/VBoxContainer/RoomsList"]
margin_left = 165.0
margin_right = 292.0
margin_bottom = 20.0
size_flags_horizontal = 8
text = "+ Crear habitación"

[node name="CharactersGroupButton" parent="MarginContainer/VBoxContainer/TabContainer/Main/ScrollContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 44.0
margin_right = 292.0
margin_bottom = 60.0
icon = ExtResource( 8 )
target_group = NodePath("../CharactersList")
color = Color( 0.929412, 0.945098, 0.443137, 0.498039 )
title = "Personajes"

[node name="CharactersList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Main/ScrollContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 292.0
margin_bottom = 84.0

[node name="BtnCreateCharacter" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Main/ScrollContainer/VBoxContainer/CharactersList"]
margin_left = 168.0
margin_right = 292.0
margin_bottom = 20.0
size_flags_horizontal = 8
text = "+ Crear personaje"

[node name="InventoryItemsGroupButton" parent="MarginContainer/VBoxContainer/TabContainer/Main/ScrollContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 88.0
margin_right = 292.0
margin_bottom = 104.0
icon = ExtResource( 11 )
target_group = NodePath("../InventoryItemsList")
color = Color( 0.337255, 0.67451, 0.301961, 0.498039 )
title = "Inventario"

[node name="InventoryItemsList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Main/ScrollContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 292.0
margin_bottom = 128.0

[node name="BtnCreateItem" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Main/ScrollContainer/VBoxContainer/InventoryItemsList"]
margin_left = 201.0
margin_right = 292.0
margin_bottom = 20.0
size_flags_horizontal = 8
text = "+ Crear ítem"

[node name="DialogTreesGroupButton" parent="MarginContainer/VBoxContainer/TabContainer/Main/ScrollContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 132.0
margin_right = 292.0
margin_bottom = 148.0
icon = ExtResource( 9 )
target_group = NodePath("../DialogTreesList")
color = Color( 0.458824, 0.807843, 0.784314, 0.498039 )
title = "Diálogos"

[node name="DialogTreesList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Main/ScrollContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 292.0
margin_bottom = 172.0

[node name="BtnCreateDialog" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Main/ScrollContainer/VBoxContainer/DialogTreesList"]
margin_left = 185.0
margin_right = 292.0
margin_bottom = 20.0
size_flags_horizontal = 8
text = "+ Crear diálogo"

[node name="Room" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_tab_disabled": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Room"]
margin_right = 304.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Room/ScrollContainer"]
margin_right = 304.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="PropsGroupButton" parent="MarginContainer/VBoxContainer/TabContainer/Room/ScrollContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 24.0
margin_right = 304.0
margin_bottom = 40.0
icon = ExtResource( 12 )
target_group = NodePath("../PropsList")
color = Color( 0.439216, 0.427451, 0.921569, 0.498039 )
title = "Props"

[node name="PropsList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Room/ScrollContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 304.0
margin_bottom = 44.0

[node name="BtnCreateProp" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Room/ScrollContainer/VBoxContainer/PropsList"]
margin_left = 185.0
margin_top = 132.0
margin_right = 292.0
margin_bottom = 152.0
size_flags_horizontal = 8
disabled = true
text = "+ Crear prop"

[node name="HotspotsGroupButton" parent="MarginContainer/VBoxContainer/TabContainer/Room/ScrollContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_right = 304.0
margin_bottom = 16.0
icon = ExtResource( 13 )
target_group = NodePath("../HotspotsList")
color = Color( 0.768627, 0.423529, 0.443137, 0.498039 )
title = "Hotspots"

[node name="HotspotsList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Room/ScrollContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 304.0
margin_bottom = 20.0

[node name="BtnCreateHotspot" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Room/ScrollContainer/VBoxContainer/HotspotsList"]
margin_left = 185.0
margin_top = 156.0
margin_right = 292.0
margin_bottom = 176.0
size_flags_horizontal = 8
disabled = true
text = "+ Crear hotspot"

[node name="Popups" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateRoom" parent="Popups" instance=ExtResource( 3 )]
margin_right = 597.0
margin_bottom = 270.0

[node name="CreateCharacter" parent="Popups" instance=ExtResource( 1 )]
margin_right = 720.0
margin_bottom = 270.0

[node name="CreateInventoryItem" parent="Popups" instance=ExtResource( 6 )]
margin_right = 673.0
margin_bottom = 270.0

[node name="CreateDialogTree" parent="Popups" instance=ExtResource( 2 )]
margin_right = 639.0
margin_bottom = 270.0

[node name="CreateProp" parent="Popups" instance=ExtResource( 5 )]

[node name="CreateHotspot" parent="Popups" instance=ExtResource( 14 )]
